--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <div class="loading-screen">
         <div class="loader"></div>
     </div>
+    <button class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <div class="backdrop"></div>
+    <div class="sidebar">
+        <a href="admin/login.html" class="admin-btn">Admin Login</a>
+    </div>
     <div class="calligraphy-bg">
         <div class="calligraphy-text">和</div>
         <div class="calligraphy-text">美</div>
@@ -27,7 +36,7 @@
     </div>
     
     <header>
-        <h1>Haykal Seo</h1>
+        <h1>HaykalSeo</h1>
         <p>Photographer | Color Grader | Cinematographer | Video Editor | Programmer | Computer Technician</p>
         <a href="#skills" class="scroll-down" aria-label="Scroll down">
           &#8595;
