--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Remove these lines from the head -->
-    <!--
+
     <div class="loading-screen active">
         <div class="loading-spinner"></div>
       </div>
       <a href="#skills" class="scroll-down" aria-label="Scroll down">
         &#8595;
       </a>
-    -->
+
 </head>
 <body>
     <div class="loading-screen">
@@ -29,11 +28,6 @@
     <div class="sidebar">
         <a href="admin/login.html" class="admin-btn">Admin Login</a>
     </div>
-    <div class="calligraphy-bg">
-        <div class="calligraphy-text">和</div>
-        <div class="calligraphy-text">美</div>
-        <div class="calligraphy-text">創</div>
-    </div>
     
     <header>
         <h1>HaykalSeo</h1>
@@ -45,7 +39,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi, I'm Haykal Seo. I'm a passionate creative professional and developer who loves creating visual stories and digital solutions.</p>
+        <p>Hi, I'm Haykal Seo. 20 years old passionate creative professional and developer who loves creating visual stories and digital solutions.</p>
     </section>
 
     <section id="services">
@@ -91,14 +85,15 @@
         <div class="skill-category">
             <h3>Programming</h3>
             <div class="skill-info">i</div>
-            <div class="skill-tooltip">Full-stack development capabilities with expertise in modern web technologies and programming languages.</div>
+            <div class="skill-tooltip">Development expertise in web, game, and mobile applications.</div>
             <ul class="software-list">
-                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VS Code" class="software-icon"> Visual Studio Code</li>
-                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" class="software-icon"> Git</li>
-                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" class="software-icon"> Python</li>
-                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" class="software-icon"> JavaScript</li>
                 <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5" class="software-icon"> HTML5</li>
                 <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3" class="software-icon"> CSS3</li>
+                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" class="software-icon"> JavaScript</li>
+                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" alt="TypeScript" class="software-icon"> TypeScript</li>
+                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="C#" class="software-icon"> C#</li>
+                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/unity/unity-original.svg" alt="Unity" class="software-icon"> Unity</li>
+                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flutter/flutter-original.svg" alt="Flutter" class="software-icon"> Flutter</li>
             </ul>
         </div>
         
@@ -108,11 +103,7 @@
             <div class="skill-tooltip">Comprehensive technical knowledge spanning multiple operating systems, hardware diagnostics, and cloud computing platforms.</div>
             <ul class="software-list">
                 <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/windows8/windows8-original.svg" alt="Windows" class="software-icon"> Windows OS</li>
-                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" alt="Linux" class="software-icon"> Linux</li>
                 <li><img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Hardware" class="software-icon"> Hardware Diagnostics</li>
-                <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apple/apple-original.svg" alt="macOS" class="software-icon"> macOS</li>
-                <li><img src="https://cdn-icons-png.flaticon.com/512/3601/3601624.png" alt="Networking" class="software-icon"> Networking</li>
-                <li><img src="https://cdn-icons-png.flaticon.com/512/2103/2103633.png" alt="Cloud Computing" class="software-icon"> Cloud Computing</li>
             </ul>
         </div>
     </section>
@@ -152,7 +143,5 @@
     </footer>
 
     <script src="script.js"></script>
-
-    <!-- Add this before the closing </body> tag -->
 </body>
 </html>
