--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi, I'm Haykal Seo. 20 years old passionate creative professional and developer who loves creating visual stories and digital solutions.</p>
+        <p>Hi, I'm Haykal, 20 years old passionate creative professional and developer who loves creating visual stories and digital solutions.</p>
     </section>
 
     <section id="services">
